--- a/aulas-html-css/FORMULARIOS/4_atividade/index.html
+++ b/aulas-html-css/FORMULARIOS/4_atividade/index.html
@@ -29,19 +29,19 @@
                 Qual o meu nome?
             </p>
             <div>
-                <input type="radio" name="" id="opcao1">
+                <input type="radio" name="opcoes" id="opcao1">
                 <label for="opcao1">Cleiton Silva</label>
             </div>
             <div>
-                <input type="radio" name="" id="opcao2">
+                <input type="radio" name="opcoes" id="opcao2">
                 <label for="opcao2">Murilo Lacerda</label>
             </div>
             <div>
-                <input type="radio" name="" id="opcao3">
+                <input type="radio" name="opcoes" id="opcao3">
                 <label for="opcao3">Murilo Kadri</label>
             </div>
             <div>
-                <input type="radio" name="" id="opcao4">
+                <input type="radio" name="opcoes" id="opcao4">
                 <label for="opcao4">Julio Cesar</label>
             </div>
         </div>
