widht, height, border e padding no box model

--- a/aulas-html-css/2_CSS/index.html
+++ b/aulas-html-css/2_CSS/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- 2 - Internal CSS -->
+
     <style>
         p {
             color: darkslateblue;
@@ -43,13 +44,13 @@
 
     <!-- 5 - criar um h3 e mudar a cor no External -->
 
+    <h3>Mudar a cor atividade</h3>
+
     <!-- 6 - classes -->
 
     <p class="paragrafos">nada a ver 1</p>
-    <p class="paragrafos">nada a ver 2</p>
-    <p class="paragrafos">nada a ver 3</p>
-
-    <h3>Mudar a cor atividade</h3>
+    <p class="cor-textos">nada a ver 2</p>
+    <p class="paragrafos cor-textos"> nada a ver 3</p>
 </body>
 
 </html>
