--- a/aulas-html-css/FORMULARIOS/4_atividade/index.html
+++ b/aulas-html-css/FORMULARIOS/4_atividade/index.html
@@ -51,9 +51,9 @@
             <label for="genero">Selecione seu genero</label>
             <select name="genero" id="genero">
                 <option disabled selected>Selecione</option>
-                <option value="m">Masculino</option>
-                <option value="m">Feminino</option>
-                <option value="m">Homosapiens</option>
+                <option value="n">Masculino</option>
+                <option value="n">Feminino</option>
+                <option value="n">Homosapiens</option>
             </select>
         </div>
 
