--- a/aulas-html-css/trabalho/index.html
+++ b/aulas-html-css/trabalho/index.html
@@ -5,16 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>revisao</title>
     <link rel="stylesheet" href="style.css">
-    <title>China</title>
 </head>
 
 <body>
-    <h1>China</h1>
-    <section>
-        <main>
-        </main>
-    </section>
+    <header>
+        <nav>
+            <ol>
+                <li> <a href="./historia.html">História</a></li>
+                <li> <a href="#cultura">Cultura</a></li>
+                <li> <a href="#politica">Politica</a></li>
+            </ol>
+        </nav>
+    </header>
+    <main>
+        <section id="geral">
+            <h2>Resumo Geral</h2>
+            <div id="paragrafo">
+                <p>A China é um país asiático com uma rica história, cultura e uma das maiores economias do mundo. Possui uma população numerosa, uma variedade de paisagens e é conhecida por sua tecnologia, indústria manufatureira e influência global. </p>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
