--- a/aulas-html-css/trabalho/index.html
+++ b/aulas-html-css/trabalho/index.html
@@ -13,16 +13,16 @@
     <header>
         <nav>
             <ol>
-                <li> <a href="./historia.html">História</a></li>
-                <li> <a href="#cultura">Cultura</a></li>
-                <li> <a href="#politica">Politica</a></li>
+                <li> <a href="./paginas/historia.html">História</a></li>
+                <li> <a href="./paginas/cultura.html">Cultura</a></li>
+                <li> <a href="./paginas/politica.html">Politica</a></li>
             </ol>
         </nav>
     </header>
     <main>
         <section id="geral">
-            <h2>Resumo Geral</h2>
             <div id="paragrafo">
+                <h2>Resumo Geral</h2>
                 <p>A China é um país asiático com uma rica história, cultura e uma das maiores economias do mundo. Possui uma população numerosa, uma variedade de paisagens e é conhecida por sua tecnologia, indústria manufatureira e influência global. </p>
             </div>
         </section>
