--- a/aulas-html-css/trabalho/index.html
+++ b/aulas-html-css/trabalho/index.html
@@ -23,9 +23,10 @@
         <section id="geral">
             <div id="paragrafo">
                 <h2>Resumo Geral</h2>
-                <p>A China é um país asiático com uma rica história, cultura e uma das maiores economias do mundo. Possui uma população numerosa, uma variedade de paisagens e é conhecida por sua tecnologia, indústria manufatureira e influência global. </p>
+                <p>A China é um país asiático com uma rica história, cultura e uma das maiores economias do mundo. Possui uma população numerosa, uma variedade de paisagens e é conhecida por sua tecnologia, indústria manufatureira e influência global. A China, oficialmente conhecida como República Popular da China, é um país localizado na Ásia Oriental. É o terceiro maior país do mundo em área e o mais populoso, com mais de 1,4 bilhão de habitantes. Sua história é milenar, com civilizações antigas, dinastias imperiais e, mais recentemente, a Revolução Comunista liderada por Mao Zedong em 1949, que estabeleceu o Partido Comunista Chinês (PCC) no poder.</p>
             </div>
         </section>
+
     </main>
 </body>
 
