--- a/aulas-html-css/trabalho/paginas/historia.html
+++ b/aulas-html-css/trabalho/paginas/historia.html
@@ -19,6 +19,7 @@
 
     </header>
     <div class="historia">
+      <h2>História</h2>
         <p> A história da China é rica e abrange milênios de civilização, com diversas dinastias imperiais e eventos
             significativos. Aqui está um resumo dos principais momentos da história chinesa, incluindo algumas das
             dinastias imperiais mais importantes e a Revolução Cultural:
@@ -43,14 +44,14 @@
             padronizou a escrita, moeda e medidas. Foi durante essa dinastia que a Grande Muralha da China começou a ser
             construída. </li>
 
-           <li> 6. Dinastia Han (206 a.C. - 220 d.C.): A Dinastia Han é frequentemente chamada de "Era de Ouro" da China.
+          <li> 6. Dinastia Han (206 a.C. - 220 d.C.): A Dinastia Han é frequentemente chamada de "Era de Ouro" da China.
             Ela viu o desenvolvimento da burocracia imperial, a invenção do papel, a expansão da Rota da Seda e a
             influência do confucionismo. </li>
 
           <li>  7. Período das Três Eras (220-280 d.C.): Após a queda da Dinastia Han, a China foi dividida em três reinos
             rivais: Wei, Shu e Wu. </li>
 
-         <li>  8. Dinastias do Norte e do Sul (420-589): Este período viu a divisão contínua da China em dinastias do norte
+          <li>  8. Dinastias do Norte e do Sul (420-589): Este período viu a divisão contínua da China em dinastias do norte
             e do sul, até que a Dinastia Sui conseguiu reunificar o país. </li>
 
           <li> 9. Dinastia Tang (618-907): A Dinastia Tang é lembrada por seu florescimento cultural, incluindo poesia,
@@ -77,7 +78,7 @@
             para consolidar seu poder e erradicar elementos considerados burgueses e revisionistas. Isso levou a uma
             repressão generalizada da cultura, educação e intelectuais, resultando em um grande tumulto social. </li>
 
-           <li> 16. República Popular da China (1949 - presente): A República Popular da China foi proclamada em 1949, com a
+          <li> 16. República Popular da China (1949 - presente): A República Popular da China foi proclamada em 1949, com a
             vitória dos comunistas liderados por Mao Zedong. Desde então, a China passou por reformas econômicas
             significativas sob líderes como Deng Xiaoping, resultando em sua ascensão como uma potência global. </li>
 
