--- a/aulas-html-css/trabalho/paginas/politica.html
+++ b/aulas-html-css/trabalho/paginas/politica.html
@@ -27,7 +27,7 @@
         </div>
         <h3>Direitos Humanos e Questões Sociais</h3>
         <div>
-        <p id="texto1">A China tem enfrentado críticas em relação aos direitos humanos, incluindo questões relacionadas à liberdade de expressão, liberdade religiosa, direitos das minorias étnicas e ativismo político. Questões como o tratamento dos uigures em Xinjiang e os protestos em Hong Kong têm atraído atenção internacional.
+        <p  class="texto">A China tem enfrentado críticas em relação aos direitos humanos, incluindo questões relacionadas à liberdade de expressão, liberdade religiosa, direitos das minorias étnicas e ativismo político. Questões como o tratamento dos uigures em Xinjiang e os protestos em Hong Kong têm atraído atenção internacional.
 
             A China também está lidando com desafios sociais, como o envelhecimento da população e a urbanização rápida, que trazem consigo questões de assistência médica, previdência social e desigualdade econômica.
             </p>
