--- a/atv1-4bi/index.html
+++ b/atv1-4bi/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Atividade</title>
 </head>
 <body>
     <main>
-        <div>
+        <div class="bomdia">
             <p>Bom dia</p>
         </div>
-        <div>
+        <div class="marcio">
             <p>Márcio</p>
         </div>
-        <div>
+        <div class="voce">
             <p>Voce é muito</p>
         </div>
-        <div>
+        <div class="lindo">
             <p>Lindoooo</p>
         </div>
 
